--- a/Project/werewolf-game/package.json
+++ b/Project/werewolf-game/package.json
@@ -8,8 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.0",
+    "@types/qrcode.react": "^1.0.5",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "firebase": "^12.5.0",
+    "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
