--- a/Project/werewolf-game/package.json
+++ b/Project/werewolf-game/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@daily-co/daily-js": "^0.85.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,6 +11,7 @@
     "@types/qrcode.react": "^1.0.5",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "agora-rtc-sdk-ng": "^4.24.1",
     "firebase": "^12.5.0",
     "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
